--- a/templates/views/about.hbs
+++ b/templates/views/about.hbs
@@ -10,6 +10,7 @@
 <body>
     <div class="main-content">
         {{>header}}
+        <p> This site is created by Rohan Vishwakarma. It Was data from mapbox.com and pirateweather.net!</p>
         <img class="me" src="./img/gallery7.png">
     </div>
     {{>footer}}
