--- a/templates/views/help.hbs
+++ b/templates/views/help.hbs
@@ -10,7 +10,8 @@
 <body>
     <div class="main-content">
         {{>header}}
-        <p>Help me {{name1}}. Hey! Nice Work {{name2}}</p>
+        <p>Need Help!</p>
+        <p>Mail Me: <a href="mailto:vrohan1360@gmail.com">vrohan1360@gmail.com</a></p>
     </div>
     {{>footer}}
 </body>
