--- a/templates/views/index.hbs
+++ b/templates/views/index.hbs
@@ -14,6 +14,7 @@
         <form>
             <input type="text" placeholder="Location">
             <button>Search</button>
+            <button id="search-location">Get Weather</button>
         </form>
         <p id="location"></p>
         <p id="error"></p>
