change in about,hbs file

--- a/templates/views/help.hbs
+++ b/templates/views/help.hbs
@@ -11,7 +11,7 @@
     <div class="main-content">
         {{>header}}
         <p>Need Help!</p>
-        <p>Mail Me: <a href="mailto:vrohan1360@gmail.com">vrohan1360@gmail.com</a></p>
+        <p>Email Me: <a href="mailto:vrohan1360@gmail.com">vrohan1360@gmail.com</a></p>
     </div>
     {{>footer}}
 </body>
